[tool.poetry]
name = "shenxiangzhuang-github-io"
version = "0.1.0"
description = ""
authors = ["Xiangzhuang Shen <datahonor@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "shenxiangzhuang"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
mkdocs = "^1.5.3"
mkdocs-bibtex = "^2.11.0"
mkdocstrings = "^0.24.0"
mkdocs-material-extensions = "^1.3.1"
mkdocs-material = "^9.4.14"
mkdocs-git-revision-date-localized-plugin = "^1.2.1"



[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[virtualenvs]
create = true
in-project = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
