[project]
name = "shenxiangzhuang-github-io"
version = "0.1.0"
description = "Xiangzhuang Shen's Blog"
authors = [
    {name = "Xiangzhuang Shen", email = "datahonor@gmail.com"},
]
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"

[tool.poetry.dependencies]
requires-python = ">= 3.10"
dependencies = []

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings",
    "mkdocs-bibtex",
    "mkdocstrings-python",
    "mkdocs-autorefs",
    "mkdocs-git-committers-plugin-2",
    "mkdocs-git-revision-date-localized-plugin",

    "mkdocs-rss-plugin",
    "pre-commit",
    "mkdocstrings",
    "mkdocs-minify-plugin",
    "neoteroi-mkdocs",
    "mkdocs-pdf",
]


[tool.uv]
extra-index-url = ["https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple", "https://pypi.org/simple"]


[tool.isort]
profile = "black"
